--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="container">
-    <h1>Please enter your name below:</h1>
+    <h1>UNDER CONSTRUCTION :)</h1>
      <label for="name"><strong>What is unique about YOUR name and birth month? Let's find out!</strong></label>
        <input type="text" id="name" placeholder="Name">
        <input type="text" id="birthMonth" placeholder="Birth month (ex. January)">
