--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - A Pen by bbolton1</title>
+  <title>bbolton1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'><link rel="stylesheet" href="./styles/style.css">
 
@@ -10,7 +10,7 @@
 <body>
 
   <div class="container">
-    <h1>UNDER CONSTRUCTION :)</h1>
+    <h1>UNDER CONSTRUCTION</h1>
      <label for="name"><strong>What is unique about YOUR name and birth month? Let's find out!</strong></label>
        <input type="text" id="name" placeholder="Name">
        <input type="text" id="birthMonth" placeholder="Birth month (ex. January)">
