--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
           | 
           <a href="https://www.geeksforgeeks.org/" target="_blank">geeksforgeeks</a>
           | 
-          Brayden Bolton
+<!--           Brayden Bolton -->
+          UNDER CONSTRUCTION
         </p>
       </footer>
     </div>
