--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+
+  <p> UNDER CONSTRUCTION!!! THIS IS NOT THE FINAL PRODUCT</p>
   <div class="container">
     <h1>UNDER CONSTRUCTION</h1>
      <label for="name"><strong>What is unique about YOUR name and birth month? Let's find out!</strong></label>
