--- a/index.html
+++ b/index.html
@@ -9,20 +9,18 @@
 </head>
 <body>
 
-
-  <p> UNDER CONSTRUCTION!!! THIS IS NOT THE FINAL PRODUCT</p>
   <div class="container">
-    <h1>UNDER CONSTRUCTION</h1>
-     <label for="name"><strong>What is unique about YOUR name and birth month? Let's find out!</strong></label>
-       <input type="text" id="name" placeholder="Name">
-       <input type="text" id="birthMonth" placeholder="Birth month (ex. January)">
-       <button onclick="displayResults()">Submit</button>
-       <div id="fullOutput">
-         <div id="textOutput"></div>
-         <div id="imageOutput"></div>
-       </div>
-   </div>
+    <h1>What would you like to know about me? NOT FINISHED</h1>
+      <label for="answer"><strong>Options: "Photo", "Personal information", "Capabilities"</strong></label>
+        <input type="text" id="answer" placeholder="(Photo, Personal information, Capabilities)">
+        <button onclick="displayResults()">Submit</button>
+        <div id="fullOutput">
+          <div id="textOutput"></div>
+          <div id="imageOutput"></div>
+        </div>
+  </div>
 
+  <div class="endinfo">
     <div class="mt-5 p-4 bg-dark text-white text-center">
       <footer>
         <p>
@@ -30,13 +28,13 @@
           |
           <a href="https://gist.github.com/barrycumbie/de4aa0fcb0cad79a870305240d726cd0" target="_blank">cis 376 🚀 page</a>
           | 
-          <a href="https://www.geeksforgeeks.org/" target="_blank">geeksforgeeks</a>
+          <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fbbolton1.github.io%2Fbbolton1%2F" target="_blank">Page validity</a>
           | 
-<!--           Brayden Bolton -->
-          UNDER CONSTRUCTION
+          Brayden Bolton CIS 376
         </p>
       </footer>
     </div>
+  </div>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js'></script>
