--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
 
   <div class="container">
     <h1>What would you like to know about me? NOT FINISHED</h1>
-      <label for="answer"><strong>Options: "Photo", "Personal information", "Capabilities"</strong></label>
-        <input type="text" id="answer" placeholder="(Photo, Personal information, Capabilities)">
+      <label for="answer"><strong>Options: "Photo", "Personal info", "Capabilities"</strong></label>
+        <input type="text" id="answer" placeholder="Photo, Personal info, Capabilities">
         <button onclick="displayResults()">Submit</button>
-        <div id="fullOutput">
-          <div id="textOutput"></div>
-          <div id="imageOutput"></div>
-        </div>
+        <div id="output"></div>
   </div>
 
-  <div class="endinfo">
     <div class="mt-5 p-4 bg-dark text-white text-center">
       <footer>
         <p>
@@ -34,7 +30,6 @@
         </p>
       </footer>
     </div>
-  </div>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js'></script>
