--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <meta charset="UTF-8">
   <title>bbolton1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'><link rel="stylesheet" href="./styles/style.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'>
+  <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 <body>
 
   <div class="container">
-    <h1>What would you like to know about me? NOT FINISHED</h1>
+    <h1>What would you like to know about me?</h1>
       <label for="answer"><strong>Options: "Photo", "Personal info", "Capabilities"</strong></label>
         <input type="text" id="answer" placeholder="Photo, Personal info, Capabilities">
         <button onclick="displayResults()">Submit</button>
-        <div id="output"></div>
+      <div id="output"></div>
   </div>
 
     <div class="mt-5 p-4 bg-dark text-white text-center">
@@ -26,7 +27,7 @@
           | 
           <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fbbolton1.github.io%2Fbbolton1%2F" target="_blank">Page validity</a>
           | 
-          Brayden Bolton CIS 376
+          <a href="https://github.com/bbolton1" target="_blank">Brayden Bolton CIS 376</a>
         </p>
       </footer>
     </div>
