--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           | 
           <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fbbolton1.github.io%2Fbbolton1%2F" target="_blank">Page validity</a>
           | 
-          <a href="https://github.com/bbolton1" target="_blank">Brayden Bolton CIS 376</a>
+          <a href="https://github.com/bbolton1" target="_blank">Brayden Bolton</a>
         </p>
       </footer>
     </div>
