--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>What would you like to know about me?</h1>
       <label for="answer"><strong>Options: "Photo", "Personal info", "Capabilities"</strong></label>
         <input type="text" id="answer" placeholder="Photo, Personal info, Capabilities">
-        <button onclick="displayResults()">Submit</button>
+        <button onclick="displayResults()">Submit</button> <!-- Uses the JavaScript function to display your results -->
       <div id="output"></div>
   </div>
 
@@ -28,7 +28,7 @@
           <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fbbolton1.github.io%2Fbbolton1%2F" target="_blank">Page validity</a>
           | 
           <a href="https://github.com/bbolton1" target="_blank">Brayden Bolton</a>
-        </p>
+         </p> <!-- gives basic links -->
       </footer>
     </div>
 
