--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
   </div>
 
     <div class="mt-5 p-4 bg-dark text-white text-center">
-      <footer>
-        <p>
-          <a href="https://www.w3schools.com/" target="_blank">w3schools</a>
-          |
-          <a href="https://gist.github.com/barrycumbie/de4aa0fcb0cad79a870305240d726cd0" target="_blank">cis 376 🚀 page</a>
-          | 
-          <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fbbolton1.github.io%2Fbbolton1%2F" target="_blank">Page validity</a>
-          | 
-          <a href="https://github.com/bbolton1" target="_blank">Brayden Bolton</a>
-         </p> <!-- gives basic links -->
-      </footer>
+      <div class="col-12">
+        <footer>
+          <p>
+            <a href="https://www.w3schools.com/" target="_blank">w3schools</a>
+            |
+            <a href="https://gist.github.com/barrycumbie/de4aa0fcb0cad79a870305240d726cd0" target="_blank">cis 376 🚀 page</a>
+            | 
+            <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fbbolton1.github.io%2Fbbolton1%2F" target="_blank">Page validity</a>
+            | 
+            <a href="https://github.com/bbolton1" target="_blank">Brayden Bolton</a>
+           </p> <!-- gives basic links -->
+        </footer>
+      </div>
     </div>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
