--- a/index.html
+++ b/index.html
@@ -8,45 +8,54 @@
   <link rel="stylesheet" href="./styles/style.css">
 
 </head>
-<body>
-  <div class="container">
-    <h1>What would you like to know about me?</h1>
-      <label for="answer"><strong>Options: "Personal info", "Capabilities", "Links"</strong></label>
-        <input type="text" id="answer" placeholder="Personal info, Capabilities, Links">
-        <button onclick="displayResults()">Submit</button> <!-- Uses the JavaScript function to display your results -->
-      <div id="output"></div>
-  </div>
+<body onload = "changeBackground()">
+  <div class="container-fluid d-flex flex-column min-vh-100">
+    <div class="container" id="mainbox">
+      <div class="col-md-12">
+        <h1>What would you like to know about me?</h1>
+          <label for="answer"><strong>Options: "Personal info", "Capabilities", "Links"</strong></label>
+            <input type="text" id="answer" placeholder="Personal info, Capabilities, Links">
+            <button onclick="displayResults()">Submit</button> <!-- Uses the JavaScript function to display your results -->
+          <div id="output"></div>
+      </div>
+    </div>
 
+    <div class="row flex-grow-1">
+      <div class=" col-md-6">
+        <div class="pic">
+          <img src="styles/Brayden.jpg" class="img-responsive">
+          <span class="pic-text">A picture of me my senior year of high school</span>
+        </div>
+      </div>
+    </div>
 
-  <div class="row">
-    <div class=" col-md-8 col-centered">
-      <div class="pictext">
-        <img src="styles/Brayden.jpg" class="img-responsive">
-        <span class="overlay-text">A picture of me my senior year of high school</span>
+    <div class="mt-5 p-4 bg-dark text-white text-center">
+      <div class="col-md-12">
+        <footer> <!-- basic links -->
+          <p>
+            <a href = "https://www.w3schools.com/" target = "_blank">w3schools</a>
+            |
+            <a href = "https://gist.github.com/barrycumbie/de4aa0fcb0cad79a870305240d726cd0" target = "_blank">cis 376 🚀 page</a>
+            | 
+            <a href = "https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fbbolton1.github.io%2Fbbolton1%2F" target = "_blank">Page validity</a>
+            | 
+            <a href = "https://github.com/bbolton1" target = "_blank">Brayden Bolton</a>
+            |
+            <div class="icons">
+              <i class = "bi bi-brightness-high" id = "dark"></i>
+              <i class = "bi bi-brightness-high-fill" id = "bright"></i>
+            </div>
+          </p> 
+        </footer>
       </div>
     </div>
   </div>
 
-  <div class="mt-5 p-4 bg-dark text-white text-center">
-    <div class="col-12">
-      <footer> <!-- basic links -->
-        <p>
-          <a href="https://www.w3schools.com/" target="_blank">w3schools</a>
-          |
-          <a href="https://gist.github.com/barrycumbie/de4aa0fcb0cad79a870305240d726cd0" target="_blank">cis 376 🚀 page</a>
-          | 
-          <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fbbolton1.github.io%2Fbbolton1%2F" target="_blank">Page validity</a>
-          | 
-          <a href="https://github.com/bbolton1" target="_blank">Brayden Bolton</a>
-        </p> 
-      </footer>
-    </div>
-  </div>
 
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/js/bootstrap.min.js'></script>
-<script src="./scripts/script.js"></script>
+<script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src = "https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
+<script src = "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/js/bootstrap.min.js"></script>
+<script src = "./scripts/script.js"></script>
 
 </body>
 </html>
